# pathogen

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  README.md  justfile  package.json
examples/: guild_config.toml
lang/: core.ftl
lang/en/: errors.ftl
lang/en/plugins/config/: cmds.ftl
lang/en/plugins/meta/: cmds.ftl
migrations/: 20210303230752_CreateConfigs.sql  20210306200315_CreateStrikes.sql  20210310000724_CreateStarboard.sql
src/: error.rs  hooks.rs  main.rs
src/cmds/: meta.rs
src/db/: mod.rs  postgres.rs  redis.rs
src/plugins/: mod.rs
src/plugins/automod/: README.md
src/plugins/config/: README.md  db.rs  mod.rs
src/plugins/config/cmds/: config.rs  mod.rs
src/plugins/custom_cmds/: README.md
src/plugins/meta/cmds/: github.rs  help.rs  mod.rs  ping.rs
src/plugins/misc/: README.md
src/plugins/misc/cmds/: eval.rs  mod.rs
src/plugins/moderation/: README.md  mod.rs
src/plugins/moderation/cmds/: ban.rs  mod.rs
src/plugins/starboard/: mod.rs
src/plugins/starboard/handlers/: mod.rs  reaction.rs
src/plugins/tickets/: README.md
src/util/: i18n.rs  macros.rs  mod.rs  regex.rs
