[package]
name = "pathogen"
version = "0.1.0"
authors = ["Benjamin Richeson <benricheson101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.1", features = ["postgres", "runtime-tokio-rustls", "json", "chrono"] }
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = "0.2.16"
tracing = "0.1.25"
dotenv = "0.15.0"
mobc = "0.7.0"
mobc-redis = "0.7.0"
lazy_static = "1.4.0"
regex = "1.4.3"
toml = "0.5.8"
fancy-regex = "0.5.0"
reqwest = { version = "0.11.1", features = ["json"] }
chrono = "0.4.19"
fluent-templates = "0.6.1"
unic-langid = { version = "0.9.0", features = ["macros"] }
if_chain = "1.0.1"

[dependencies.serenity]
version = "0.10.2"
default-features = false
features = [
  "cache",
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "standard_framework",
  "framework",
  "utils",
]
